--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <title>Animal and Pokémon Demo</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -11,12 +14,10 @@
             display: flex;
             justify-content: space-around;
         }
-
         h2 {
             text-align: center;
             color: #4CAF50;
         }
-
         #container, #pokemonSection {
             max-width: 600px;
             background: white;
@@ -25,7 +26,6 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             margin: 10px;
         }
-
         input[type="text"], input[type="number"], input[type="button"] {
             width: calc(100% - 20px);
             padding: 10px;
@@ -35,12 +35,6 @@
             font-size: 16px;
             transition: border-color 0.3s;
         }
-
-        input[type="text"]:focus, input[type="number"]:focus {
-            border-color: #45a049;
-            outline: none;
-        }
-
         input[type="button"] {
             background-color: #4CAF50;
             color: white;
@@ -48,44 +42,19 @@
             border: none;
             border-radius: 5px;
         }
-
-        input[type="button"]:hover {
-            background-color: #45a049;
-        }
-
-        #errorMessage {
-            color: red;
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        #myDiv01, #pokemonDisplay {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #cccccc;
-            border-radius: 5px;
-            background-color: #e8f5e9;
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
         .animal-entry, .pokemon-entry {
             padding: 5px;
             margin-bottom: 5px;
-            background: #dcedc8;
             border-radius: 5px;
         }
-
         .pokemon-entry {
-            color: #023e8a;
+            background: #dcedc8;
         }
     </style>
 </head>
-
 <body>
     <div id="container">
         <h2>Animal Class Complex Demonstration</h2>
-
         <script>
             // Base class representing an Animal
             class MyAnimal {
@@ -115,13 +84,11 @@
                         </div>`;
                 }
             } // end class MyAnimal
-
-            // Extended classes for various animals (same as the previous example)
+            
             class MyCat extends MyAnimal {
                 constructor(name, age) {
                     super(name, age, "house");
                 }
-
                 makeSound() {
                     return 'Meow!';
                 }
@@ -131,7 +98,6 @@
                 constructor(name, age) {
                     super(name, age, "house");
                 }
-
                 makeSound() {
                     return 'Woof!';
                 }
@@ -141,7 +107,6 @@
                 constructor(name, age) {
                     super(name, age, "sky");
                 }
-
                 makeSound() {
                     return 'Chirp!';
                 }
@@ -151,7 +116,6 @@
                 constructor(name, age) {
                     super(name, age, "water");
                 }
-
                 makeSound() {
                     return 'Glub!';
                 }
@@ -161,7 +125,6 @@
                 constructor(name, age) {
                     super(name, age, "meadow");
                 }
-
                 makeSound() {
                     return 'Squeak!';
                 }
@@ -187,34 +150,6 @@
             const showErrorMessage = () => {
                 const errorMessage = document.getElementById('errorMessage');
                 errorMessage.innerHTML = "Animal is not valid. Please enter one of the following: " + validAnimals.join(', ');
-            }
-
-            // Pokémon data (truncated for demonstration)
-            const pokemons = [
-                { name: "Bulbasaur", type: "Grass/Poison", hp: 45, attack: 49, defense: 49, description: "A seed Pokémon." },
-                { name: "Charmander", type: "Fire", hp: 39, attack: 52, defense: 43, description: "A small lizard-like Pokémon." },
-                { name: "Squirtle", type: "Water", hp: 44, attack: 48, defense: 65, description: "A turtle Pokémon." },
-                { name: "Pidgey", type: "Normal/Flying", hp: 40, attack: 45, defense: 40, description: "A bird Pokémon." },
-                // ...additional Pokémon...
-                { name: "Zarude", type: "Dark/Grass", hp: 105, attack: 140, defense: 55, description: "A Pokémon that lives in the forest." },
-                { name: "Calyrex", type: "Psychic/Grass", hp: 100, attack: 80, defense: 80, description: "An ancient Pokémon known for its wisdom." },
-            ];
-
-            const getRandomPokemon = () => {
-                const randomIndex = Math.floor(Math.random() * pokemons.length);
-                return pokemons[randomIndex];
-            }
-
-            const showPokemon = () => {
-                const pokemon = getRandomPokemon();
-                document.getElementById('pokemonDisplay').innerHTML = `
-                    <div class="pokemon-entry">
-                        <h3>${pokemon.name} (${pokemon.type})</h3>
-                        <p><strong>HP:</strong> ${pokemon.hp}</p>
-                        <p><strong>Attack:</strong> ${pokemon.attack}</p>
-                        <p><strong>Defense:</strong> ${pokemon.defense}</p>
-                        <p>${pokemon.description}</p>
-                    </div>`;
             }
         </script>
 
@@ -249,5 +184,49 @@
         <input type="button" value="Generate Pokémon" onClick="showPokemon()"><br>
         <div id="pokemonDisplay">Choose a Pokémon!</div>
     </div>
+
+    <script>
+        // Pokémon data fetching from the PokéAPI
+        let pokemons = [];
+
+        const fetchPokemons = async () => {
+            for (let i = 1; i <= 1025; i++) {
+                const response = await fetch(`https://pokeapi.co/api/v2/pokemon/${i}`);
+                const data = await response.json();
+                pokemons.push({
+                    name: data.name,
+                    type: data.types.map(type => type.type.name).join(', '),
+                    hp: data.stats[0].base_stat,
+                    attack: data.stats[1].base_stat,
+                    defense: data.stats[2].base_stat,
+                    description: `Pokémon ID: ${data.id}`
+                });
+            }
+        };
+
+        const getRandomPokemon = () => {
+            const randomIndex = Math.floor(Math.random() * pokemons.length);
+            return pokemons[randomIndex];
+        };
+
+        const showPokemon = () => {
+            if (pokemons.length === 0) {
+                document.getElementById('pokemonDisplay').innerHTML = `<p>Loading Pokémon data...</p>`;
+                return;
+            }
+            const pokemon = getRandomPokemon();
+            document.getElementById('pokemonDisplay').innerHTML = `
+                <div class="pokemon-entry">
+                    <h3>${pokemon.name.charAt(0).toUpperCase() + pokemon.name.slice(1)} (${pokemon.type})</h3>
+                    <p><strong>HP:</strong> ${pokemon.hp}</p>
+                    <p><strong>Attack:</strong> ${pokemon.attack}</p>
+                    <p><strong>Defense:</strong> ${pokemon.defense}</p>
+                    <p>${pokemon.description}</p>
+                </div>`;
+        };
+
+        // Initially fetch Pokémon data
+        fetchPokemons();
+    </script>
 </body>
 </html>
